# learning-openGL

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  README.md  Shader.cpp  Shader.h  Window.cpp  Window.h  main.cpp
Engine/Modeling/: Model.cpp  Shader.cpp  Skybox.cpp  Skybox.h
Engine/Utils/: CommonValues.cpp  CommonValues.h
Game/: Camera.cpp
Lights/: DirectionalLight.cpp  Light.cpp  Light.h  OmniShadowMap.cpp  OmniShadowMap.h  PointLight.cpp  PointLight.h  ShadowMap.cpp  ShadowMap.h  SpotLight.cpp  SpotLight.h
Shaders/: omni_shadow_map.frag  omni_shadow_map.geom  omni_shadow_map.vert
Tools/: Camera.cpp  Camera.h  Window.cpp  Window.h  utils.cpp  utils.h
Visuals/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
gameObject/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
models/: Model.cpp  Model.h
shaders/: Shader.cpp  Shader.h  fragment_shader.glsl  vertex_shader.glsl
textures/: Material.cpp  Material.h  Texture.cpp  Texture.h
utils/: utils.cpp  utils.h  utils.hpp
